KNewStuff: Fix file path and process call

Summary:
BUG: 420312

The bug was caused by two issues: The file path that was stored was wrong, for example:
Old paths:
/home/user/.local/share/servicemenu-download//rootactions_servicemenu_2.9.1.tar.gz
New paths:
/home/user/.local/share/servicemenu-download/iso_mounter_unmounter.desktop

Additionally the overload for the process call always fails, for example:
```qWarning() << QProcess::execute("echo \"Hello there!\""); // Works
qWarning() << QProcess::execute("echo",{"\"Hello there!\""}); // Works
qWarning() << QProcess::execute("echo \"Hello there!\"",{}); // Fails, returns -2```

Test Plan: Try out what was described in bug report

Reviewers: #knewstuff, ngraham, nicolasfella, elvisangelaccio, meven, mlaurent, leinir, anthonyfieroni

Reviewed By: leinir, anthonyfieroni

Subscribers: anthonyfieroni, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D29101